main.css
/* CSS Reset */

/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
  License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* Border Box Version of Box Model */


/** {border : red solid 1px !important;}*/

*,
*:before,
*:after {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}


/* Container */

.container {

	max-width: 150em;
	/*max-width: 324em;*/
	margin: 0 auto;
}


/* Navigation */

header {
	height: 6em;
	min-height: 6em;
	background-color: #ffffff;
/*	box-shadow:0 .3em 1em -.6em #888888;*/
	padding: 2.1em 4.3%;
	position:fixed;
	width : 100%;
	z-index: 200;
	top:0;
	-webkit-transition: top 0.2s ease-in-out;
	-moz-transition: top 0.2s ease-in-out;
	-ms-transition: top 0.2s ease-in-out;
	-o-transition: top 0.2s ease-in-out;
	transition: top 0.2s ease-in-out;
	/*padding : 0 4.3%;*/
}


a.logo-sprite {

	float: left;
	margin-right: 6em;
	width: 19em;
	height: 0;
	padding-bottom: 1.6em;
	background-image: url("logo-sprite.jpg");
	background-position: 0 0;
	background-size: 300% 100%;
	display: block;
}

a.logo-sprite:hover {

		background-position: 50% 0;
}

a.logo-sprite:active {
		background-position: 100% 0;

}

.pages { 

	float: right;
		margin: .2em 0;
}

.pages li {
	list-style-type: none;
	margin-right: 3em;
	text-align: right;
	display: block;
	font-family: 'Abel', sans-serif;
	font-size: 1.2em;


	/* To keep menu list in order*/
		float: left;


}

.pages li:last-child {
	margin-right: 0;
}

.pages li a {

	text-decoration: none;
	color: #818181;
}

			.pages li a:hover {
				color: #ffc400;

				}

			.pages li a:active {
					color: #E6B000;

					}

.icon-ham-menu {

	display: none;
}

/*.icon-x {

	display: none;
}*/


	/*	Mobile Navigation */

				@media (max-width: 790px) {

						
							header {
								height: auto;
								background-color: #ffffff;
								padding: 2.1em 4.3% 2.1em 4.3%;
							}
							a.logo-sprite {
								clear: both;
								margin-right: 0;
							}

							/*.icon-x {
								float: right;
								display: block;
								color:#b9b9b9;
								font-size: .9em;
								padding-top: .4em;
							}*/

							.icon-ham-menu {
								float: right;
								display: block;
								color:#b9b9b9;
								font-size: 1.2em;
								padding-top: .1em;
								color: #b9b9b9;

							}

							.icon-ham-menu:hover {

								color: #ffc400;

							}

							.icon-ham-menu:active {

								color: #E6B000;

							}
									/*Jquery added classes*/
											.icon-ham-menu.js {
												color: #ffc400;
												}

											#mobile-nav.js{
												display: none;
												}

							.pages { 
								clear: both;
								display: block;
								float: none;
								margin: 0 auto;
								}

							.pages li:first-child{
								margin-top: 0;
								padding-top: 2.5em;
							}
							
							.pages li {
								margin: 1.5em auto 1.5em auto;
								text-align: center;
								float: none;
							}
							.pages li:last-child {
								margin: 1.5em auto 0 auto;
								padding-bottom: 1.5em;
							}
							}

				}

/* Introduction */

.clearfix:after{

	    content:".";
        display:block;
        height:0;
        clear:both;
        visibility:hidden;
}

.intro {
	margin: 8em 0 auto 0;
	background-color: #ffffff;
	padding: 0 4.3%;

}

	@media (max-width: 790px) {
		.intro {
			margin-top: 8em;

	}
}

.intro h1 {

	font-family: 'Abel', sans-serif;
	font-size: 2.5em;
	color: #ce662c;
	margin-bottom: .3em;
	letter-spacing: .1em;
	text-align: center;
	text-transform: uppercase;



}

.intro h2 {

	font-family: 'Abel', sans-serif;
	font-size: 1.2em;
	color: #ce662c;
	margin-bottom: 1em;
	letter-spacing: .1em;
	text-align: center;
	text-transform: capitalize;

}

.intro p {
	margin: 0 auto;
	width: 50%;
	display: block;
	text-align: center;
	margin-top: 0;
	margin-bottom: 1em;

}

.intro p:last-child {
	margin-bottom: 0;

}

		/*Intro Animations*/

				#enter-first {

				  -webkit-animation-duration: 2.8s;
				  -moz-animation-duration: 2.8s;


				}

				#enter-second {
				  -webkit-animation-duration: 1.6s;



				  -moz-animation-duration: 1.6s;

				}

				#enter-third {
				  -webkit-animation-duration: 1.4s;
				  -webkit-animation-delay: .5s;


				  -moz-animation-duration: 1.4s;
				  -moz-animation-delay: .5s;

				}


/* About Me Section */

.clearfix:after{

	    content:".";
        display:block;
        height:0;
        clear:both;
        visibility:hidden;
}

.about-me-wrapper {

	background-color: #f6f6f6;
	margin: 0 auto;
	padding: 7.3% 4.3%;



}

.col-1-3 {

	width: 100%;
	max-width: 30em;
	margin: 0 auto;
/*	float: left;
	vertical-align: top;
	margin-right: 3.4%;*/


}

.middle-column {

	margin-top: 3em;
}

.col-1-3-last {

	width: 100%;
	max-width: 30em;
	margin: 0 auto;
	margin-top: 3em;
/*	float: right;
	vertical-align: top;*/



}


        @media (min-width: 900px) {

        	.about-me-wrapper {

				background-color: #f6f6f6;
				margin: 0 auto;
				padding: 4.3% 4.3%;

				}


			.col-1-3 {

				width: 31%;
				max-width: 45em;
				float: left;
				vertical-align: top;
				margin: 0 3.4% 0 0;

			}

			.middle-column {

				margin-top: 0;
			}

			.col-1-3-last {

				width: 31%;
				max-width: 45em;
				float: right;
				vertical-align: top;
				margin-top: 0;
			          }
        	}



p {

		font-family: 'Abel', sans-serif;
		font-size: 1em;
		color: #818181;
	 
	 }

.icn {
 
 	max-width: 3em;
 	display: block;
 	margin: 0 auto 2em auto;



}


/* Preview Projects */

.clearfix:after{

	    content:".";
        display:block;
        height:0;
        clear:both;
        visibility:hidden;
}

.project-list-container { 

	background-color: #ffffff;
	margin: 0 auto;
	padding: 4.3% 4.3%;

}

.individual-project {
	position: relative;
	width: 50%;
	float: left;

}

@media (max-width: 900px) {

	.individual-project {
		position: relative;
		width: 100%;

	}
	}

.individual-project img {

	width: 100%;

}

/*Hover*/

.overlay, .hover-box {
	/*	Positioning */
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;

	}

.hover-box{
	opacity: 0;



}

	/*Text Hover*/
.hover-text{
		font-family: 'Abel', sans-serif;
		font-size: 1.2em;
		letter-spacing: .1em;
		text-transform: uppercase;
		color: #ffffff;
		border: .15em solid #ffffff;
		padding: .8em 2.5em;
		text-decoration: none;

		position: absolute;
	    top: 50%;
	    left: 50%;
	    margin-right: -50%;
	    transform: translate(-50%, -50%);


}

/*Hover Box Colors*/

.hover-box:hover {


		-webkit-transition: opacity 500ms;
  		-moz-transition: opacity 500ms;
 		-o-transition: opacity 500ms;
  		transition: opacity 500ms;

}


.free-people:hover {
		opacity: 100;
		background-color: #cf472a;
		background-color: rgba(207,71,42,0.8);

}

.ubook:hover {
		opacity: 100;
		background-color: #425c74;
		background-color: rgba(66,92,116,0.8);
}


.annual-report:hover {
		opacity: 100;
		background-color: #7c9ab8;
		background-color: rgba(124,154,184,0.8);

}

.juvet:hover {
		opacity: 100;
		background-color: #201b53;
		background-color: rgba(32,27,83,0.8);

}

.brewing-label:hover {
		opacity: 100;
		background-color: #A53A38;
		background-color: rgba(165,58,56,0.8);

}

.daughter:hover {
		opacity: 100;
		background-color: #000;
		background-color: rgba(0,0,0,0.8);

}

.luminary:hover {
		opacity: 100;
		background-color: #33446f;
		background-color: rgba(51,68,111,0.8);
}

.mint:hover {
		opacity: 100;
		background-color: #b8cc6e;
		background-color: rgba(184,204,110,0.8);
}

.yellow:hover {
		opacity: 100;
		background-color: #ffc400;
		background-color: rgba(255,196,0,0.8);
}

/*Project Hover Colors*/

/*.free-people-preview {
	background-color: rgba(207,71,42,0.6);
}*/



/*Footer*/

footer {
	background-color: #f6f6f6;
	padding: 2.1em 4.3%;
	width : 100%;
}

.footer-header {
	font-family: 'Abel', sans-serif;
	font-size: 1.1em;
	color: #ffc400;
	margin-bottom: .2em;
	text-transform: uppercase;
	letter-spacing: .1em;

}

.footer-intro {
		font-family: 'Abel', sans-serif;
		font-size: 1em;
		color: #818181;
		line-height: 1.2em;
		margin-bottom: .8em;
	 
	 }
	 
.contact-links li {
		display: inline-block;

	 }

		.contact-links li a {
				font-family: 'Abel', sans-serif;
				font-size: 1em;
				color: #818181;
				margin-bottom: .3em;
				text-decoration: none;
				display: inline-block;
			}

					.contact-links li a:hover {
							color: #ffc400;

						}

					.contact-links li a:active {
							color: #E6B000;

						}



.contact-info {
		font-family: 'Abel', sans-serif;
		font-size: 1em;
		color: #818181;

}

